--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Hola</h1>
+    <div class="container">
+        <h1 class="text-center mt-5 mb-5">APP API-REST PYTHON-FLASK-MONGODB</h1>
+    </div>
+    <div class="container">
+        <div class="row row-col-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2">
+            <div class="col-md-6 mb-3">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="text-center">Alta producto</div>
+                    </div>
+                    <div class="card-body">
+                        <form action="/products" method="post">
+                            <label>Nombre</label>
+                            <input type="text" class="form-control mb-3" name="name">
+                            <label>Precio</label>
+                            <input type="text" class="form-control mb-3" name="price">
+                            <label>Cantidad</label>
+                            <input type="text" class="form-control mb-3" name="quantity">
+                            <button class="btn btn-primary" type="submit">Guardar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="text-center">Productos</h5>                        
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <div class="row row-col-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-3">
+                                {% for product in products %}
+
+                                    <div class="col">
+                                        <li class="list-group-item mb-3">
+                                            <form action="/edit/{{product.name}}" method="POST">
+                                                <input type="text" class="form-control" value="{{product.name}}" name="name">
+                                                <small>CANTIDAD</small>
+                                                <input type="text" class="form-control" value="{{product.quantity}}" name="quantity">
+                                                <small>PRECIO</small>
+                                                <input type="text" class="form-control" value="{{product.price}}" name="price">
+                                                <button class="btn btn-primary btn-sm mt-3" type="submit">Editar</button>
+                                                <a href="{{url_for('delete',product_name=product.name)}}" class="btn btn-danger btn-sm mt-3">Eliminar</a>
+                                            </form>
+                                        </li>
+                                    </div>
+
+                                {% endfor %}
+                            </div>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
